# Cmake_Tutorial

./: README.md
1st/: main.c
1st/src/: calc.c
2nd/: CMakeLists.txt
2nd/lib/: Wifi.c
ASMTemplate/: CMakeLists.txt  Makefile  hello.txt
ASMTemplate/cmake/: ExternalLib.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake
ASMTemplate/src/: main.asm
ASMTemplate/test/: CMakeLists.txt
ModernCXXTemplate/: .gitignore  CMakeLists.txt  Makefile  vcpkg.json
ModernCXXTemplate/cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
ModernCXXTemplate/include/: tmp.h
ModernCXXTemplate/src/: main.c  tmp.c
ModernCXXTemplate/test/: CMakeLists.txt
ModernCXXTemplate/test/src/: tmp_test.cpp
ModifiedCXXTemplate/: CMakeLists.txt  Makefile  vcpkg.json
ModifiedCXXTemplate/cmake/: ExternalLib.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
sheetSheet/: CMakeLists.txt
